# loomux

./: .gitignore  CLAUDE.md  README.md  SPIKE-README.md  THIRD_PARTY_NOTICES.md  index.html  install.ps1  install.sh  package-lock.json  package.json  spike-iframe-test.html  tsconfig.json  vite.config.ts
.github/agents/: advisor.md  orchestrator.md  process.md  rev-orch.md  rev-tests.md  rev-ui.md  reviewer.md  spike-runner.agent.md  worker-deep.md  worker-quick.md  worker.md
.github/workflows/: actionlint.yml  ci.yml  docs.yml  release.yml
.loomux/: lessons.md  workflow.yml
dev-harness/360-multiwebview-spike/: README.md  child-webview-adversary.html  run-multiwebview-via-cdp.mjs
dev-harness/360-sandbox-spike/: README.md  harness.js  plugin-window-adversary.html  run-phase05-via-cdp.mjs  run-via-cdp.mjs
doc/demo/: project-tabs.md  remote-sessions.md  repo-agents.md  voice-prompt.md
doc/design/: acl-manifest.md  agent-usage-limits.md  clipboard.md  content-panes.md  crash-observability.md  cross-workspace-channel.md  durability-and-disk.md  embedded-panels.md  fileedit.md  files-pane.md  group-cost-tracking.md  job-object-teardown.md  lessons.md  open-in-editor.md  orchestration.md  pane-plugins.md  project-tabs.md  remote-sessions.md  resource-guard.md  session-restore.md  supervisor-skills.md  voice.md  workflows.md
docs/: README.md  _config.yml  autonomous-mode.md  core-concepts.md  getting-started.md  index.md  orchestration.md  troubleshooting.md
docs/features/: git-view.md  github-issues.md  index.md  pane-plugins.md  project-tabs.md  session-browser.md  steering.md  voice-prompts.md
npm/: README.md  package.json
scripts/: check-versions.js  stage-whisper.ps1
src/: agents.ts  attention.ts  auditsummary.ts  auditview.ts  autonomy.ts  bootfill.ts  channel.ts  clipboard.ts  compactionstatus.ts  contextmenu.ts  diffrender.ts  dirtystate.ts  domutil.ts  editor.ts  editorwidget.ts  embedsplit.ts  eol.ts  fileapi.ts  fileedit.ts  fileexplorer.ts  fileexplorermodel.ts  filehashmodel.ts  fileicons.ts  filematch.ts  filemenu.ts  filemgr.ts  filetreemodel.ts  findwidget.ts  git.ts  gitformat.ts  gitgraph.ts  gitlayout.ts  gitview.ts  gitworktree.ts  grid.ts  group.ts  groupresume.ts  groupview.ts  heldbadge.ts  hintbar.ts  (+61 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json  test.manifest
src-tauri/capabilities/: default.json  plugin-zero-template.json  plugin.json  spike-iframe.json  spike-plugin-zero.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: agent_autopilot_flags.toml  bind_agent.toml  change_dir.toml  create_orchestration.toml  dir_info.toml  discover_git_bash.toml  fm_capabilities.toml  fm_delete_start.toml  fm_hash_start.toml  fm_list.toml  fm_new_file.toml  fm_new_folder.toml  fm_open.toml  fm_open_with.toml  fm_rename.toml  fm_reveal.toml  ft_files_start.toml  ft_list_dir.toml  ft_read_file.toml  ft_replace.toml  ft_search_cancel.toml  ft_search_start.toml  ft_write_file.toml  gh_auth_status.toml  gh_issue_comment.toml  gh_issue_create.toml  gh_issue_list.toml  gh_issue_set_labels.toml  gh_issue_view.toml  gh_pr_comment.toml  gh_pr_list.toml  gh_pr_view.toml  git_branch_create.toml  git_branches.toml  git_checkout.toml  git_cherry_pick.toml  git_commit.toml  git_commit_files.toml  git_diff.toml  git_discard.toml  (+100 more)
src-tauri/permissions/sets/: fileedit-read.toml  fileedit-write.toml  filemgr-read.toml  filemgr-write.toml  gh-read.toml  gh-write.toml  git-read.toml  git-write.toml  gitwatch.toml  main-ui.toml  misc.toml  orch-control.toml  orch-read.toml  plugin-broker.toml  plugins.toml  pty-control.toml  pty-read.toml
src-tauri/resources/conhost/: README.md
src-tauri/resources/plugins/resource-monitor/: format.js  index.html  main.js  plugin.json  style.css  tauri-ipc.js
src-tauri/resources/whisper/: LICENSE-whisper.cpp.txt  MODEL-CARD.txt  README.md
src-tauri/src/: cliprobe.rs  command_manifest.rs  editor.rs  fileedit.rs  filehash.rs  filemgr.rs  gh.rs  git.rs  gitwatch.rs  lib.rs  main.rs  metrics.rs  obs.rs  pluginbroker.rs  pluginregion.rs  plugins.rs  procmetrics.rs  pty.rs  sessions.rs  spike_iframe.rs  spike_multiwebview.rs  spike_phase05.rs  uistate.rs  usage.rs  voice.rs  winpath.rs
src-tauri/src/orchestration/: digest.rs  intake.rs  lessons.rs  mcp.rs  mod.rs  notify.rs  profiles.rs  report.rs  workflow.rs
src-tauri/src/orchestration/templates/: block.md  orchestrator.md  planner.md  reviewer.md  worker.md  workflow.md
src-tauri/tests/: acl_manifest.rs  direct_spawn.rs  fileedit.rs  filehash.rs  filemgr.rs  job_object.rs  lessonsfile.rs  orchestration.rs  plugins.rs  prompts.rs  smoke.rs  workflow.rs  workflowfile.rs
src-tauri/tests/fixtures/attention/: claude-askuserquestion.txt  copilot-question.txt  fp-breadcrumb-separator.txt  fp-fenced-pointer-block.txt  fp-leading-pointer-prose.txt  fp-prose-arrow-keys.txt  fp-shell-prompt-glyph.txt  idle-input-box.txt  pos-pointer-last-line.txt  streaming-output.txt
src-tauri/tests/fixtures/digest/: claude_sample.jsonl
src-tauri/tests/fixtures/digest/copilot/: checkpoints_index.md  workspace.yaml
src-tauri/tests/fixtures/pre222/: README.md  orchestrator.md  planner.md  reviewer.md  worker.md
templates/loomux-plugin/: README.md  index.html  main.js  (+2 more)
test/: attention.test.ts  auditsummary.test.ts  auditview.test.ts  autonomy.test.ts  autopilot.test.ts  bootfill.test.ts  channel.test.ts  clipboard.test.ts  compactionstatus.test.ts  dirtystate.test.ts  domutil.test.ts  editorwidget.test.ts  embedsplit.test.ts  eol.test.ts  fileexplorermodel.test.ts  filehashmodel.test.ts  fileicons.test.ts  filematch.test.ts  filemenu.test.ts  filetreemodel.test.ts  findwidget.test.ts  gitformat.test.ts  gitlayout.test.ts  gitworktree.test.ts  group.test.ts  groupresume.test.ts  heldbadge.test.ts  hiddenrule.test.ts  hintbar.test.ts  issuesmodel.test.ts  layout.test.ts  orchbadge.test.ts  overlaysize.test.ts  overlaystate.test.ts  panefit.test.ts  panefocus.test.ts  panemenu.test.ts  panerename.test.ts  panerestore.test.ts  panesetup.test.ts  (+32 more)
(+7 files in other folders)
