[package]
name = "loomux"
version = "0.6.0"
description = "A sleek terminal multiplexer for AI agent management"
edition = "2021"

[lib]
name = "loomux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
base64 = "0.22"
dirs = "6"
# Orchestration backend: local MCP server (thread-per-request HTTP).
# NOTE: keep getrandom-based crates (uuid v4, rand) out of this tree — they
# import bcryptprimitives.dll!ProcessPrng, which this project's Windows 10
# baseline doesn't export, and the binary then fails to load (0xc0000139).
# Agent tokens use std's OS-seeded RandomState instead.
tiny_http = "0.12"
tauri-plugin-dialog = "2"
sysinfo = "0.33"

# Voice-prompt prototype (#58): native mic capture via WASAPI. cpal was vetted
# with `cargo tree -i getrandom --target all` — getrandom appears ONLY as a
# build-dependency (Android-only oboe-sys, and jobserver→cc), never in cpal's
# runtime tree on Windows, so it does NOT import ProcessPrng and is safe on the
# Windows 10 baseline (see the getrandom note above). Pure Rust WASAPI bindings
# — no C++/cmake build step. Transcription shells out to a prebuilt whisper.cpp
# binary (see src/voice.rs) rather than linking whisper-rs, which WOULD pull a
# cmake/MSVC C++ build into `cargo check`. This is a prototype (issue #58).
cpal = "0.15"

# Vendor-neutral GPU metrics on Windows: PDH performance counters give
# per-engine utilization + dedicated VRAM usage for any WDDM adapter (AMD,
# Intel, NVIDIA); DXGI reports total VRAM and the adapter name.
[target.'cfg(windows)'.dependencies]
# Fresh PATH resolution from the registry, so CLIs installed while loomux
# (or its parent terminal) is already running are still found by new panes
# and probes. Pure windows-sys underneath — no getrandom (see note above).
winreg = "0.55"
windows = { version = "0.57", features = [
    "Win32_Foundation",
    "Win32_System_Performance",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    # Kill-on-close Job Objects (issue #78): a spawned pane's whole process
    # subtree dies deterministically when its pane is killed/closed. Security
    # is only pulled for CreateJobObjectW's SECURITY_ATTRIBUTES arg (we pass
    # null); Threading for OpenProcess + the extended-limit-info struct.
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Security",
] }

[dev-dependencies]
# default-features = false drops tempfile's getrandom feature — see the
# ProcessPrng note above; with it enabled the test binary fails to load.
tempfile = { version = "3", default-features = false }
# The Job-Object integration test (issue #78) opens a real ConPTY exactly the
# way spawn_pty does; portable-pty is already in the main tree (getrandom-free).
portable-pty = "0.9"

[profile.release]
lto = true
codegen-units = 1
# Named backtrace frames in the panic hook's crash logs (issue #53). `debug` —
# NOT `strip` — is what puts loomux's OWN functions in the debug info: without
# it (release defaults to debug=false) the MSVC PDB carries only public symbols
# and dbghelp resolves our frames as `__ImageBase`, even with the PDB adjacent.
# `line-tables-only` adds function names + line numbers at a modest size cost;
# `strip = "debuginfo"` then keeps the *exe* slim (debug info lives in the
# standalone PDB / split debug, not the shipped binary). Net: build-tree and CI
# backtraces are genuinely symbolicated; installed bundles stay address-only
# until the PDB is shipped — see doc/design/crash-observability.md.
debug = "line-tables-only"
strip = "debuginfo"
