[package]
name = "loomux"
version = "0.7.1"
description = "A sleek terminal multiplexer for AI agent management"
edition = "2021"

[lib]
name = "loomux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
base64 = "0.22"
dirs = "6"
# Orchestration backend: local MCP server (thread-per-request HTTP).
# NOTE: keep getrandom-based crates (uuid v4, rand) out of this tree — they
# import bcryptprimitives.dll!ProcessPrng, which this project's Windows 10
# baseline doesn't export, and the binary then fails to load (0xc0000139).
# Agent tokens use std's OS-seeded RandomState instead.
tiny_http = "0.12"
tauri-plugin-dialog = "2"
sysinfo = "0.33"

# File hashing for the file-manager pane (#214): a short SHA-256 per row, plus an
# on-demand Hash submenu (SHA-256/512, SHA-1, CRC-32/16/8).
#
# VETTED AGAINST THE GETRANDOM BAN above — which is the only reason this is three lines
# rather than a hand-rolled SHA-256. Audit run 2026-07-11; re-run any time with the
# commands below.
#
# THE QUESTION IS NOT "does the lock contain getrandom" — it already did, three times over,
# and does on main today. It is "do THESE crates add a getrandom path". They do not:
#
#   cargo tree -e normal --target all -p sha2 / -p sha1 / -p crc
#     sha2 / sha1 → cfg-if, cpufeatures → libc, digest → block-buffer →
#                   generic-array → typenum          (no getrandom anywhere)
#     crc         → crc-catalog                      (a pure lookup-table crate, zero deps)
#
# For completeness, every getrandom in the lock and where it comes from — ALL PRE-EXISTING,
# none of them ours (this is what the commands actually print, verbatim shape):
#
#   cargo tree -e normal --target all -i getrandom@0.2.17
#     → getrandom v0.2.17 └── redox_users → dirs-sys → dirs → {loomux, tauri, wry}
#       REDOX-ONLY. `dirs` gates redox_users behind cfg(target_os = "redox"), so this edge
#       exists only under `--target all`; it is not compiled on Windows/macOS/Linux.
#   cargo tree -e normal --target all -i getrandom@0.3.4
#     → getrandom v0.3.4 └── tauri v2.11.5           (tauri's own)
#   cargo tree -e normal --target all -i getrandom@0.4.3
#     → getrandom v0.4.3 └── uuid → cfb → infer → tauri-utils → tauri-codegen/-macros
#       (tauri's build/codegen chain)
#
# The binary loads today with all three present, so the ProcessPrng hazard is not what
# these edges are — but they are named here so a future auditor re-running the commands
# isn't ambushed by output the comment didn't predict. (An earlier version of this comment
# claimed 0.2.17 printed nothing and never mentioned 0.4.3; rev-106 caught it. The
# CONCLUSION was right; the recorded evidence has to be reproducible too.)
#
# Cost in new packages: `sha2` was ALREADY in Cargo.lock (a tauri transitive) with its whole
# chain, and `sha1` reuses that chain — so these three lines add exactly THREE packages:
# sha1, crc, crc-catalog. Hashing is not a place to be clever: these are the RustCrypto
# reference implementations, and the integration tests check them against the published
# FIPS 180-4 / CRC-catalogue vectors rather than against themselves.
sha2 = "0.10"
sha1 = "0.10"
crc = "3"

# Vendor-neutral GPU metrics on Windows: PDH performance counters give
# per-engine utilization + dedicated VRAM usage for any WDDM adapter (AMD,
# Intel, NVIDIA); DXGI reports total VRAM and the adapter name.
[target.'cfg(windows)'.dependencies]
# Fresh PATH resolution from the registry, so CLIs installed while loomux
# (or its parent terminal) is already running are still found by new panes
# and probes. Pure windows-sys underneath — no getrandom (see note above).
winreg = "0.55"
windows = { version = "0.57", features = [
    "Win32_Foundation",
    "Win32_System_Performance",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    # Kill-on-close Job Objects (issue #78): a spawned pane's whole process
    # subtree dies deterministically when its pane is killed/closed. Security
    # is only pulled for CreateJobObjectW's SECURITY_ATTRIBUTES arg (we pass
    # null); Threading for OpenProcess + the extended-limit-info struct.
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Security",
    # File-manager pane (#214). Two Shell APIs, NO new crate — which is the whole
    # point of reaching for the `windows` crate we already depend on rather than
    # `tauri-plugin-opener` or the `trash` crate:
    #   ShellExecuteW    — "open with the OS default app for this extension",
    #                      exactly what Explorer's double-click does. Takes a path,
    #                      never a shell string, so there is no injection surface
    #                      (cf. `cmd /c start`, which re-parses its argument).
    #   SHFileOperationW — delete to the RECYCLE BIN (FO_DELETE | FOF_ALLOWUNDO),
    #                      so a mis-click is recoverable. The `trash` crate would
    #                      have done this too, but it is an unvetted dependency and
    #                      this is ~30 lines against an API we already link.
    # WindowsAndMessaging is pulled only for ShellExecuteW's SHOW_WINDOW_CMD arg.
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

# Voice-prompt prototype (#58): native mic capture via WASAPI. Windows-scoped on
# purpose — cpal pulls alsa-sys on Linux (needs libasound2-dev, which the CI
# runners lack) and coreaudio on macOS, but the feature's transcription path is
# Windows-flavoured (whisper-cli.exe, %LOCALAPPDATA%). Keeping it under the
# windows cfg means Linux/macOS builds don't drag in ALSA/CoreAudio, and the
# voice module is stubbed there to return a graceful "not available" error.
#
# cpal was vetted with `cargo tree -i getrandom` — getrandom appears ONLY as a
# build-dependency (jobserver→cc) or Android-only oboe-sys, never in cpal's
# Windows runtime tree, so it does NOT import ProcessPrng and is safe on the
# Windows 10 baseline (see the getrandom note above). Pure Rust WASAPI bindings,
# no C++/cmake build. Transcription shells out to a prebuilt whisper.cpp binary
# (see src/voice.rs) rather than linking whisper-rs, which WOULD pull a
# cmake/MSVC C++ build into `cargo check`. This is a prototype (issue #58).
cpal = "0.15"

[dev-dependencies]
# default-features = false drops tempfile's getrandom feature — see the
# ProcessPrng note above; with it enabled the test binary fails to load.
tempfile = { version = "3", default-features = false }
# The Job-Object integration test (issue #78) opens a real ConPTY exactly the
# way spawn_pty does; portable-pty is already in the main tree (getrandom-free).
portable-pty = "0.9"

[profile.release]
lto = true
codegen-units = 1
# Named backtrace frames in the panic hook's crash logs (issue #53). `debug` —
# NOT `strip` — is what puts loomux's OWN functions in the debug info: without
# it (release defaults to debug=false) the MSVC PDB carries only public symbols
# and dbghelp resolves our frames as `__ImageBase`, even with the PDB adjacent.
# `line-tables-only` adds function names + line numbers at a modest size cost;
# `strip = "debuginfo"` then keeps the *exe* slim (debug info lives in the
# standalone PDB / split debug, not the shipped binary). Net: build-tree and CI
# backtraces are genuinely symbolicated; installed bundles stay address-only
# until the PDB is shipped — see doc/design/crash-observability.md.
debug = "line-tables-only"
strip = "debuginfo"
